# xmedia

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: xmedia.cpp
app/src/main/cpp/include/: concurrent_queue.h
app/src/main/cpp/include/MNN/: VCS.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/scliang/x/media/: MainActivity.java  MediaManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: shader_frag_effect_3basic.glsl  shader_frag_effect_3floyd.glsl  shader_frag_effect_barrelblur.glsl  shader_frag_effect_burn.glsl  shader_frag_effect_cmyk.glsl  shader_frag_effect_crosshatch.glsl  shader_frag_effect_distortedtv.glsl  shader_frag_effect_distortedtv_box.glsl  shader_frag_effect_distortedtv_crt.glsl  shader_frag_effect_distortedtv_glitch.glsl  shader_frag_effect_drawing.glsl  shader_frag_effect_eb.glsl  shader_frag_effect_face.glsl  shader_frag_effect_fastblur.glsl  shader_frag_effect_fisheye.glsl  shader_frag_effect_flame.glsl  shader_frag_effect_float_camera.glsl  shader_frag_effect_floyd.glsl  shader_frag_effect_gaussianblur.glsl  shader_frag_effect_heart.glsl  shader_frag_effect_hexagon.glsl  shader_frag_effect_illustration.glsl  shader_frag_effect_lens.glsl  shader_frag_effect_lut.glsl  shader_frag_effect_neon.glsl  shader_frag_effect_none.glsl  shader_frag_effect_old_video.glsl  shader_frag_effect_pagecurl.glsl  shader_frag_effect_ripple.glsl  shader_frag_effect_sin_wave.glsl  shader_frag_effect_sobel.glsl  shader_frag_none.glsl  shader_vert_effect_none.glsl  shader_vert_none.glsl
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
